--- a/package.json
+++ b/package.json
@@ -10,19 +10,22 @@
     "test": "jest",
     "cdk": "cdk"
   },
+  "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.504.0",
+    "@types/aws-lambda": "^8.10.133",
+    "amazon-cognito-passwordless-auth": "^0.12.1",
+    "aws-cdk-lib": "2.123.0",
+    "aws-lambda": "^1.0.7",
+    "constructs": "^10.0.0",
+    "source-map-support": "^0.5.21"
+  },
   "devDependencies": {
     "@types/jest": "^29.5.11",
-    "@types/node": "20.11.6",
+    "@types/node": "^20.11.14",
     "aws-cdk": "2.123.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "~5.3.3"
-  },
-  "dependencies": {
-    "amazon-cognito-passwordless-auth": "^0.12.1",
-    "aws-cdk-lib": "2.123.0",
-    "constructs": "^10.0.0",
-    "source-map-support": "^0.5.21"
   }
 }
